--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,10 @@
 [tox]
 envlist =
-       {py36,py37,py38,py39,py310,py311}-django{2.2,3.0,3.1,3.2}-drf{3.11,3.12,3.13}
-       {py38,py39,py310,py311}-django{4.0}-drf{3.12,3.13}
+       py{38,39,310}-django{32}-drf{3.11,3.12}
+       py{38,39,310,311}-django{41,42}-drf{3.14}
 
 [gh-actions]
 python =
-    3.6: py36
-    3.7: py37
     3.8: py38
     3.9: py39
     3.10: py310
@@ -18,14 +16,13 @@ allowlist_externals = *
 setenv =
        PYTHONDONTWRITEBYTECODE=1
 deps =
-       django2.2: Django>=2.2,<2.3
-       django3.0: Django>=3.0,<3.1
-       django3.1: Django>=3.1,<3.2
-       django3.2: Django>=3.2,<3.3
-       django4.0: Django>=4.0,<4.1
-       drf3.11: djangorestframework>=3.11,<3.12
-       drf3.12: djangorestframework>=3.12,<3.13
-       drf3.13: djangorestframework>=3.13,<3.14
+       django3.2: Django~=3.2.0
+       django4.1: Django~=4.1.0
+       django4.2: Django~=4.2.0
+       drf3.11: djangorestframework~=3.11.0
+       drf3.12: djangorestframework~=3.12.0
+       drf3.13: djangorestframework~=3.13.0
+       drf3.14: djangorestframework~=3.14.0
        -rrequirements-tox.txt
 
 [testenv:py39-flake8]
